--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:node/recommended",
-    "google"
+    "google",
+    "plugin:require-extensions/recommended"
   ],
   "root": true,
   "rules": {
