--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-require-extensions": "^0.1.3",
     "typescript": "^5.3.3"
   },
   "engines": {
