--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: qoomon/actions--setup-git-user@v1
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -22,8 +23,7 @@ jobs:
         run: npm run build
 
       # commit changes
-      - run: git add -f dist/
-      - uses: qoomon/actions--commit@v1
-        with:
-          message: 'build(release): release action'
-      - run: git push
+      - run: |
+          git add -f dist/
+          git commit -m 'build(release): release action'
+          git push
