--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "ncc build index.ts",
     "lint": "eslint .",
     "test": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --forceExit --detectOpenHandles",
-    "ts-node": "NODE_OPTIONS='--loader ts-node/esm --experimental-specifier-resolution=node --no-warnings' node"
+    "ts-node": "NODE_OPTIONS='--require ts-node/register --loader ts-node/esm' node"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
