--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@actions/github": "^6.0.0",
     "@actions/http-client": "^2.2.0",
     "@octokit/graphql-schema": "^14.58.0",
+    "shell-quote": "^1.8.1",
     "ts-node": "^10.9.2",
     "yaml": "^2.3.4",
     "zod": "^3.22.4"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@eslint/js": "^8.56.0",
     "@types/node": "^20.11.7",
+    "@types/shell-quote": "^1.7.5",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@vercel/ncc": "^0.38.1",
